MIT-698: fix padding on mobile for 'centered' theme pages

--- a/components/columnArea/columnArea--centered.css
+++ b/components/columnArea/columnArea--centered.css
@@ -1,6 +1,11 @@
 /* Centered column theme styles */
 .wrapper {
-  composes: wrapper from './columnArea--feed.css';
+  @include container;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding-bottom: rem(15);
+  padding-top: rem(40);
 }
 
 .main {
